@@ -207,6 +207,11 @@ else:
     test.run(arguments = '-f SConstructFoo', status=2, stderr='''\
 scons: \*\*\* Source file: foo\..* is static and is not compatible with shared target: .*
 ''')
+    # Run it again to make sure that we still get the error
+    # even though the static objects already exist.
+    test.run(arguments = '-f SConstructFoo', status=2, stderr='''\
+scons: \*\*\* Source file: foo\..* is static and is not compatible with shared target: .*
+''')
 
 test.run(arguments = '-f SConstructFoo2')
 
